[package]
name = "cgl-rs"
version = "0.1.5"
edition = "2021"
authors = ["Jaysmito Mukherjee <jaysmito101@gmail.com>"]
description = "CGL is a multipurpose library mainly for recreational coding / demo scenes / prototyping / small games / experimentation."
repository = "https://github.com/Jaysmito101/cgl"
license = "MIT"
keywords = ["cgl", "opengl", "2d", "3d", "gamedev"]
build = "./src/build.rs"
readme = "README.md"

[dependencies]
libc = "0.2.0"